# Inkling-FA4-Relative-Attention

./: .gitignore  README.md  pyproject.toml
benchmarks/: autotune.py  benchmark_prefill.py
docs/: workflow.md
outputs/: architecture.md
src/inkling_fa4/: __init__.py  autotune_configs.py  reference.py  triton_kernel.py  triton_kernel_decode.py  triton_kernel_kv_pruned.py
tests/: test_correctness.py
work/: test_triton_fa4_rel_attention.py
